# sergiumargan-sudo_ground-cyber-plugin

./: README.md  action.yml  pyproject.toml
docs/sample-report/: groundcyber-report.html  groundcyber-report.json  groundcyber-report.md
src/groundcyber/: __init__.py  audit.py  cli.py  config.py  github_client.py  models.py  relocation.py  report.py  scoring.py  verify.py
tests/: test_cli.py  test_enrichment.py  test_github_client.py  test_redact.py  test_relocation.py  test_reports.py  test_scoring_families.py  test_verify.py
